[package]
name = "pebble"
version = "0.1.0"
authors = ["BooleanCat <thgodkin@gmail.com>"]
edition = "2018"

[lib]
name = "libpebble"
path = "src/lib.rs"

[[bin]]
name = "pebble"
path = "src/bin.rs"

[dependencies]
structopt = "0.3"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
